# Velvet-Compiler

Ax1/: A11DocumentationRevisionNotes.txt  Ax1Desc.txt  CST8152_Compilers_W23-A21-Velvet_Model.doc  README.txt  ~WRL1529.tmp
Ax1/A1/: A12RevisionNotes.txt  A12TestPlan.txt
Ax1/A2/: A21RevisionNotes.txt  CST8152_Compilers_W23-A21-Velvet_Model.doc  ~$T8152_Compilers_W23-A21-Velvet_Model.doc
Ax1/A2/External Files/: A21.jff  A21.xlsx
Ax1/A3/: A31_Modifications_-_Patch_Notes.txt
Ax2/: Ax2Desc.txt
Ax2/A12/: A12.h  Compilers.c  Compilers.h  MainReader.c  Reader.c  Reader.h  launch.vs.json
Ax2/A12/code/: CMakeLists.txt  Compilers.c  Compilers.h
Ax2/A12/input/: INPUT9_Big-A12-m-100-10.err
Ax2/A22/code/: CMakeLists.txt  Compilers.c  Compilers.h  MainScanner.c  Reader.c  Scanner.c  Scanner.h
Ax2/A22/input/: A22.bat
Ax2/A32/code/: CMakeLists.txt  Compilers.c  MainParser.c  Parser.c  Parser.h  Reader.c  Reader.h  Scanner.c  Scanner.h
Ax2/A32/input/: INPUT1_Hello.vlt  INPUT2_Volume.vlt  INPUT3_Factorial.vlt  INPUT4_Datatypes.vlt  INPUT5_General.vlt
Ax2/input/: A12.bat
